[tool.poetry]
name = "mixpanel-test"
version = "0.1.0"
description = ""
authors = ["SMatusik <sebastianmatusik95@gmail.com>"]
readme = "README.md"
packages = [{include = "mixpanel_test"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
mixpanel = "^4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
